# open-widget-library

./: README.md  pyproject.toml
examples/: test.py
examples/demo/: page.py
src/open_widget_library/: __init__.py  background.py  card.py  dropdown.py  ellipsis_label.py  icon.py  spinner.py  tabs.py  widget_config.py
src/owl/: __init__.py
src/owl/enums/: color.py
src/owl/examples/: test.py
src/owl/examples/demo/: page.py
src/owl/examples/demo/pages/: __init__.py  notification_page.py  slider_page.py  sortable_widget_page.py  tabs_page.py
src/owl/utils/: __init__.py  lorem_ipsum.py  widget_config.py
src/owl/widgets/: __init__.py  backdrop_blur.py  background.py  button.py  card.py  codeblock.py  container.py  dot_matrix_background_effect.py  dropdown.py  gradient_circles_background_effect.py  grid_debug_background_effect.py  icon.py  label.py  slider.py  sortable_handle.py  sortable_widget_list.py  stacked_page.py  tabs.py  toast_notification.py  widget.py
