[project]
name = "open-widget-library"
version = "0.0.1"
description = "A widget library for Qt"
readme = "README.md"
authors = [
    { name = "parker", email = "parker@parkerbritt.com" }
]
requires-python = ">=3.13"
dependencies = ["qtpy"]

[project.scripts]
open-widget-library-demo = "owl.examples.demo.page:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "owl"
module-root = "src"
